# bit

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 060ea8eea4c9_add_bit_table.py  7c0d5ddc997b_add_user_audit_log_code_file_tables.py
bit/: __main__.py  auth.py  config.py  database.py  site.py
bit/endpoints/: api.py  auth.py  bit.py
bit/models/: __init__.py  audit.py  base.py  bit.py  code.py  file.py  user.py
tests/: conftest.py  test_api_auth.py  test_api_bit.py  test_database.py
