[tool.poetry]
name = "bit"
version = "0.1.0"
description = "Website for sharing code snippets for the Beginner.Codes Discord community."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
pytest-asyncio = "^0.18.3"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.36"
greenlet = "^1.1.2"
PyJWT = "^2.3.0"
cryptography = "^37.0.2"
bcrypt = "^3.2.2"
httpx = "^0.22.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
